# api/swagger.yaml
@@ -11,6 +11,9 @@ definitions:
       appName:
         type: string
         x-go-name: AppName
+      deletedAt:
+        type: string
+        x-go-name: DeletedAt
       deployedVersions:
         items:
           $ref: '#/definitions/Version'
@@ -36,6 +39,12 @@ definitions:
   Device:
     description: Device model
     properties:
+      appId:
+        type: string
+        x-go-name: AppID
+      appName:
+        type: string
+        x-go-name: AppName
       deviceId:
         type: string
         x-go-name: DeviceID
@@ -48,6 +57,9 @@ definitions:
       id:
         type: string
         x-go-name: ID
+      version:
+        type: string
+        x-go-name: Version
       versionId:
         type: string
         x-go-name: VersionID
@@ -73,6 +85,9 @@ definitions:
       id:
         type: string
         x-go-name: ID
+      lastLaunchedAt:
+        type: string
+        x-go-name: LastLaunchedAt
       numOfAppLaunches:
         format: int64
         type: integer
