# pkg/models/version.go
@@ -11,4 +11,12 @@ type Version struct {
 	NumOfCurrentInstalls int64    `json:"numOfCurrentInstalls"`
 	NumOfAppLaunches     int64    `json:"numOfAppLaunches"`
 	Devices              []Device `json:"devices,omitempty"`
+	LastLaunchedAt       string   `json:"lastLaunchedAt,omitempty"`
+}
+
+func NewVersion(sdkInfo *Device, app *App) *Version {
+	ver := new(Version)
+	ver.Version = sdkInfo.Version
+	ver.AppID = app.AppID
+	return ver
 }
